XmlPullParserFactory and logging dependencies
XmlPullParserFactory mystery solved by using META-INF/services/
configuration file. switched to slf4j’s simplelogger instead of log4j